
======================================================================

  For the latest news about less, see https://greenwoodsoftware.com/less
  You can also download the latest version of less from there.

  Report bugs, suggestions or comments at 
  https://github.com/gwsw/less/issues.

======================================================================

	Major changes between "less" versions 633 and 642

* Fix problem when a program piping into less reads from the tty,
  like sudo asking for password (github #368).

* Fix search modifier ^E after ^W.

* Fix bug using negated (^N) search (github #374).

* Fix bug setting colors with -D on Windows build (github #386).

* Fix reading special chars like PageDown on Windows (github #378).

* Fix mouse wheel scrolling on Windows (github #379).

* Fix erroneous EOF when terminal window size changes (github #372).

* Fix compile error with some definitions of ECHONL (github #395).

* Fix regression in exit code when stdin is /dev/null and 
  output is a file (github #373).

* Add lesstest test suite to production release.

======================================================================

	Major changes between "less" versions 632 and 633

* Fix build on systems which have ncurses/termcap.h or 
  ncursesw/termcap.h but not termcap.h.

======================================================================

	Major changes between "less" versions 608 and 632

* Add LESSUTFCHARDEF environment variable (github #275).

* Add # command (github #330).

* Add ^S search modifier (github #196).

* Add --wordwrap option (github #113).

* Add --no-vbell option (github #304).

* Add --no-search-headers option (github #44).

* Add --modelines option (github #89).

* Add --intr option (github #224).

* Add --proc-backspace, --proc-tab and --proc-return options (github #335).

* Add --show-preproc-errors option (github #258).

* Add LESS_LINES and LESS_COLUMNS environment variables (github #84).
