@@ -977,7 +977,7 @@ loop:
 		/*
 		 * Overwrite: create the file.
 		 */
-		logfile = creat(filename, 0644);
+		logfile = creat(filename, CREAT_RW);
 		break;
 	case 'A': case 'a':
 		/*
