@@ -11,7 +11,7 @@
 
 ======================================================================
 
-	Major changes between "less" versions 633 and 642
+	Major changes between "less" versions 633 and 643
 
 * Fix problem when a program piping into less reads from the tty,
   like sudo asking for password (github #368).
@@ -30,10 +30,15 @@
 
 * Fix compile error with some definitions of ECHONL (github #395).
 
+* Fix crash on Windows when writing logfile (github #405).
+
 * Fix regression in exit code when stdin is /dev/null and 
   output is a file (github #373).
 
-* Add lesstest test suite to production release.
+* Add lesstest test suite to production release (github #344).
+
+* Change lesstest output to conform with 
+  automake Simple Test Format (github #399).
 
 ======================================================================
 
